align all projects to same line